# agent-python

./: .coveragerc  .stestr.conf  AUTHORS  README.md  release.sh  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-unit-tests.yml
shakenfist_agent/: main.py  protocol.py
shakenfist_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
shakenfist_agent/commandline/: daemon.py
shakenfist_agent/tests/: test_daemon.py  test_protocol.py
