[metadata]
name = shakenfist-agent
summary = An in-guest agent for instances running on Shaken Fist
license = Apache2
description-file = README.md
author = Michael Still
author-email = mikal@stillhq.com
home-page = https://madebymikal.com/shakenfist
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3

[files]
packages =
    shakenfist_agent

[entry_points]
console_scripts =
    sf-agent = shakenfist_agent.main:cli

[pbr]
skip_changelog = True
